--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "name": "onboarding-post-it",
-  "version": "0.1.0",
+  "version": "1.0.14",
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint",
     "test:unit": "vue-cli-service test:unit",
-    "testt": "mocha"
+    "test": "mocha"
   },
   "dependencies": {
     "axios": "^0.19.0",
@@ -16,7 +16,6 @@
     "express": "^4.17.1",
     "express-vue": "^5.9.0",
     "faker": "^4.1.0",
-    "mocha": "^6.1.4",
     "normalizr": "^3.4.0",
     "rosie": "^2.0.1",
     "vue": "^2.6.10",
@@ -33,6 +32,7 @@
     "chai": "^4.2.0",
     "eslint": "^5.16.0",
     "eslint-plugin-vue": "^5.0.0",
+    "mocha": "^9.1.4",
     "node-sass": "^4.9.0",
     "sass-loader": "^7.1.0",
     "vue-template-compiler": "^2.6.10"
